chore(KFLUXVNGD-148): Add custom certificate support for git clone and buildah task
Add param to support the custom certificate support for git-clone-oci-ta and
buildah-oci-ta tasks to connect to internal registry. For this we have updated
the use-trusted-artifact/create-trusted-artifact steps, which download/upload
the artifact from/to a registry.

Jira-Url: https://issues.redhat.com/browse/KFLUXVNGD-155
Signed-off-by: Homaja Marisetty <hmariset@redhat.com>

--- a/task/git-clone-oci-ta/0.1/git-clone-oci-ta.yaml
+++ b/task/git-clone-oci-ta/0.1/git-clone-oci-ta.yaml
@@ -307,6 +307,10 @@ spec:
       volumeMounts:
         - mountPath: /var/workdir
           name: workdir
+        - mountPath: /etc/pki/tls/certs/ca-custom-bundle.crt
+          name: trusted-ca
+          readOnly: true
+          subPath: ca-bundle.crt
       env:
         - name: IMAGE_EXPIRES_AFTER
           value: $(params.ociArtifactExpiresAfter)
