--- a/task/git-clone-oci-ta/0.1/recipe.yaml
+++ b/task/git-clone-oci-ta/0.1/recipe.yaml
@@ -9,6 +9,7 @@ addEnvironment:
     value: /var/workdir/source
 add:
   - create-source
+useTAVolumeMount: true
 removeWorkspaces:
   - output
 description: The git-clone-oci-ta Task will clone a repo from the provided url and store it as a trusted
