--- a/task/buildah-oci-ta/0.2/recipe.yaml
+++ b/task/buildah-oci-ta/0.2/recipe.yaml
@@ -7,6 +7,7 @@ add:
   - use-cachi2
 removeWorkspaces:
   - source
+useTAVolumeMount: true
 replacements:
   workspaces.source.path: /var/workdir
 regexReplacements:
