prefetch-dependencies: Enforce early failure of the script
Employ the usage of 'set -euo pipefail' to prevent the task from
finishing with a success exit code even though something has failed
inside the script leading to confusing and irritating user experience.

At the same time, since the task will now fail with the first command
returning a non-zero exit status, introduce a trap handler to make sure
we clean up by unregistering the container from the RHSM service if
needed.

Signed-off-by: Erik Skultety <eskultet@redhat.com>

--- a/task/prefetch-dependencies-oci-ta/0.1/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.1/prefetch-dependencies-oci-ta.yaml
@@ -188,6 +188,7 @@ spec:
           value: $(workspaces.netrc.path)
       script: |
         #!/bin/bash
+        set -euo pipefail
 
         RHSM_ORG=""
         RHSM_ACT_KEY=""
@@ -310,6 +311,8 @@ spec:
             --org "${RHSM_ORG}" \
             --activationkey "${RHSM_ACT_KEY}" || exit 1
 
+          trap rhsm_unregister EXIT
+
           entitlement_files="$(ls -1 /etc/pki/entitlement/*.pem)"
           ENTITLEMENT_CERT_KEY_PATH="$(grep -e '-key.pem$' <<<"$entitlement_files")"
           ENTITLEMENT_CERT_PATH="$(grep -v -e '-key.pem$' <<<"$entitlement_files")"
@@ -342,8 +345,10 @@ spec:
         cachi2 --log-level="$LOG_LEVEL" inject-files /var/workdir/cachi2/output \
           --for-output-dir=/cachi2/output
 
-        # UNREGISTER RHSM
-        rhsm_unregister
+        # hack: the OCI generator would delete the function since it doesn't consider trap a "usage"
+        if false; then
+          rhsm_unregister
+        fi
       computeResources:
         limits:
           memory: 3Gi
