Add CODEOWNER update

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -117,6 +117,9 @@
 /task/build-maven-zip           @ligangty @yma96
 /task/build-maven-zip-oci-ta    @ligangty @yma96
 
+# renovate groupName=pnc
+/task/pnc-prebuild-git-clone-oci-ta           @rnc
+
 # renovate groupName=oci-copy
 /task/oci-copy          @ralphbean
 /task/oci-copy-oci-ta   @ralphbean
