sast-coverity-check: Fix error while creating filtered file
Related: https://issues.redhat.com/browse/OSH-801

The missing character prevented the filtered files to be correctly generated and uploaded

--- a/task/sast-coverity-check-oci-ta/0.1/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.1/sast-coverity-check-oci-ta.yaml
@@ -264,8 +264,8 @@ spec:
         csgrep --mode=sarif --set-scan-prop cov-scanned-files-coverage:"${COVERAGE_RATIO}" \
           --set-scan-prop cov-scanned-files-success:"${SUCCEEDED}" \
           --set-scan-prop cov-scanned-files-total:"${TOTAL_FILES}" \
-          --set-scan-prop cov-scanned-lines:"${LINES_OF_CODE}"
-        filtered_sast_coverity_buildless_check_all_findings.json \
+          --set-scan-prop cov-scanned-lines:"${LINES_OF_CODE}" \
+          filtered_sast_coverity_buildless_check_all_findings.json \
           >"/var/workdir"/coverity-results.sarif
 
         if [[ -z "$(csgrep --mode=evtstat filtered_sast_coverity_buildless_check_all_findings.json)" ]]; then
