--- a/task/sast-coverity-check/0.1/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.1/sast-coverity-check.yaml
@@ -247,7 +247,7 @@ spec:
         csgrep --mode=sarif --set-scan-prop cov-scanned-files-coverage:"${COVERAGE_RATIO}" \
         --set-scan-prop cov-scanned-files-success:"${SUCCEEDED}" \
         --set-scan-prop cov-scanned-files-total:"${TOTAL_FILES}" \
-        --set-scan-prop cov-scanned-lines:"${LINES_OF_CODE}"
+        --set-scan-prop cov-scanned-lines:"${LINES_OF_CODE}" \
         filtered_sast_coverity_buildless_check_all_findings.json \
         > "$(workspaces.workspace.path)"/coverity-results.sarif
 
