prefetch-dependencies/0.2: default to SPDX
Switch the default SBOM format to SPDX.

Bump the version label, add the MIGRATION.md file.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
@@ -7,7 +7,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: "0.1"
+    app.kubernetes.io/version: "0.2"
 spec:
   description: |-
     Task that uses Cachi2 to prefetch build dependencies. The fetched dependencies and the
@@ -76,7 +76,7 @@ spec:
     - name: sbom-type
       description: 'Select the SBOM format to generate. Valid values: spdx,
         cyclonedx.'
-      default: cyclonedx
+      default: spdx
   results:
     - name: CACHI2_ARTIFACT
       description: The Trusted Artifact URI pointing to the artifact with
