--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -2,7 +2,7 @@ apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   labels:
-    app.kubernetes.io/version: "0.1"
+    app.kubernetes.io/version: "0.2"
   annotations:
     tekton.dev/pipelines.minVersion: "0.12.1"
     tekton.dev/tags: "image-build, konflux"
@@ -46,7 +46,7 @@ spec:
     name: config-file-content
     default: ""
   - name: sbom-type
-    default: cyclonedx
+    default: spdx
     description: "Select the SBOM format to generate. Valid values: spdx, cyclonedx."
   - name: caTrustConfigMapName
     type: string
