buildah/0.4: default to SPDX
Switch the default SBOM format to SPDX.

Bump the version label, add the MIGRATION.md file.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
@@ -7,7 +7,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: 0.2.1
+    app.kubernetes.io/version: "0.4"
     build.appstudio.redhat.com/build_type: docker
 spec:
   description: |-
@@ -90,7 +90,7 @@ spec:
         cyclonedx. Note: the SBOM from the prefetch task - if there is one
         - must be in the same format.'
       type: string
-      default: cyclonedx
+      default: spdx
     - name: SKIP_SBOM_GENERATION
       description: Skip SBOM-related operations. This will likely cause EC
         policies to fail if enabled
