--- a/task/buildah-remote/0.4/buildah-remote.yaml
+++ b/task/buildah-remote/0.4/buildah-remote.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/tags: image-build, konflux
   creationTimestamp: null
   labels:
-    app.kubernetes.io/version: 0.2.1
+    app.kubernetes.io/version: "0.4"
     build.appstudio.redhat.com/build_type: docker
   name: buildah-remote
 spec:
@@ -127,7 +127,7 @@ spec:
       to fail if enabled
     name: SKIP_SBOM_GENERATION
     type: string
-  - default: cyclonedx
+  - default: spdx
     description: 'Select the SBOM format to generate. Valid values: spdx, cyclonedx.
       Note: the SBOM from the prefetch task - if there is one - must be in the same
       format.'
