--- a/task/oci-copy-oci-ta/0.2/oci-copy-oci-ta.yaml
+++ b/task/oci-copy-oci-ta/0.2/oci-copy-oci-ta.yaml
@@ -7,7 +7,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: "0.1"
+    app.kubernetes.io/version: "0.2"
     build.appstudio.redhat.com/build_type: oci-artifact
 spec:
   description: Given a file in the user's source directory, copy content from
@@ -41,7 +41,7 @@ spec:
       description: 'Select the SBOM format to generate. Valid values: spdx,
         cyclonedx.'
       type: string
-      default: cyclonedx
+      default: spdx
     - name: SOURCE_ARTIFACT
       description: The Trusted Artifact URI pointing to the artifact with
         the application source code.
