--- a/task/oci-copy/0.2/oci-copy.yaml
+++ b/task/oci-copy/0.2/oci-copy.yaml
@@ -5,7 +5,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: "0.1"
+    app.kubernetes.io/version: "0.2"
     build.appstudio.redhat.com/build_type: oci-artifact
   name: oci-copy
 spec:
@@ -37,7 +37,7 @@ spec:
     - name: SBOM_TYPE
       description: "Select the SBOM format to generate. Valid values: spdx, cyclonedx."
       type: string
-      default: cyclonedx
+      default: spdx
 
   results:
     - description: Digest of the artifact just pushed
