--- a/task/buildah-remote/0.3/buildah-remote.yaml
+++ b/task/buildah-remote/0.3/buildah-remote.yaml
@@ -627,6 +627,8 @@ spec:
       else
         bash scripts/script-build.sh "$@"
       fi
+      echo "Build on remote host $SSH_HOST finished"
+
       buildah images
       container=$(buildah from --pull-never "$IMAGE")
       buildah mount "$container" | tee /shared/container_path
