--- a/task/build-paketo-builder-oci-ta/0.1/build-paketo-builder-oci-ta.yaml
+++ b/task/build-paketo-builder-oci-ta/0.1/build-paketo-builder-oci-ta.yaml
@@ -99,7 +99,7 @@ spec:
   stepTemplate:
     env:
       - name: BUILDER_IMAGE
-        value: "quay.io/redhat-user-workloads/konflux-build-pipeli-tenant/paketo-container:2a51208449696d85b2f80444bee7bf7caa104f48 "
+        value: "quay.io/redhat-user-workloads/konflux-build-pipeli-tenant/paketo-container:a256a321e4d7212a71bb197cf393ef818638443c"
       - name: CONTEXT
         value: $(params.CONTEXT)
       - name: HERMETIC
@@ -208,15 +208,11 @@ spec:
         pack config experimental true
 
         UNSHARE_ARGS=()
-        if [ "${HERMETIC}" == "true" ]; then
-          UNSHARE_ARGS+=("--net")
-        fi
+        PACK_BUILDER_FILE="source/builder.toml"
 
-        echo "pack builder create ${IMAGE} --config builder.toml ${PACK_ARGS}"
-        unshare -Uf "${UNSHARE_ARGS[@]}" --keep-caps -r --map-users 1,1,65536 --map-groups 1,1,65536 -w source -- \
-          pack builder create ${IMAGE} --config builder.toml ${PACK_ARGS}
+        BUILDPACKS_IMAGES=$(tomljson ${PACK_BUILDER_FILE} | jq -r '.buildpacks[].uri?, .extensions[].uri?')
 
-        BASE_IMAGE=$(tomljson source/builder.toml | jq -r '.stack."build-image"')
+        BASE_IMAGE=$(tomljson ${PACK_BUILDER_FILE} | jq -r '.stack."build-image"')
         podman inspect ${BASE_IMAGE} | jq -r '.[].Digest' > /shared/BASE_IMAGES_DIGESTS
 
         echo "Create locally a Dockerfile using the build image defined part of the builder.toml file to include the BASE IMAGE"
@@ -232,11 +228,35 @@ spec:
         )
 
         if [ "${HERMETIC}" == "true" ]; then
-          for image in $BASE_IMAGES; do
+          UNSHARE_ARGS+=("--net")
+
+          for image in ${BASE_IMAGES}; do
             echo "Pull the base image: $image using unshare"
             unshare -Ufp --keep-caps -r --map-users 1,1,65536 --map-groups 1,1,65536 -- buildah pull $image
           done
+
+          for image in ${BUILDPACKS_IMAGES}; do
+            echo "Pull the buildpacks image: $image using unshare"
+            unshare -Ufp --keep-caps -r --map-users 1,1,65536 --map-groups 1,1,65536 -- buildah pull $image
+          done
+
+          echo "Fetch lifecycle and patch the ${PACK_BUILDER_FILE} file ..."
+          LIFECYCLE_VERSION=$(tomljson ${PACK_BUILDER_FILE} | jq -r '.lifecycle.version')
+          unshare -Ufp --keep-caps -r --map-users 1,1,65536 --map-groups 1,1,65536 -- \
+            curl -skL https://github.com/buildpacks/lifecycle/releases/download/v${LIFECYCLE_VERSION}/lifecycle-v${LIFECYCLE_VERSION}+linux.x86-64.tgz --output source/lifecycle-v${LIFECYCLE_VERSION}+linux.x86-64.tgz
+
+          echo "Patch the builder toml file to use the local PATH of the lifecycle tar.gz file"
+          tomljson ${PACK_BUILDER_FILE} > source/builder.json
+          jq 'del(.lifecycle.version) | .lifecycle.uri = "lifecycle-v'"${LIFECYCLE_VERSION}"'+linux.x86-64.tgz"' source/builder.json > source/new-builder.json
+
+          PACK_BUILDER_FILE="source/new-builder.toml"
+          pip install tomli_w
+          python -c "import json, tomli_w, sys; tomli_w.dump(json.load(open('source/new-builder.json')), open('${PACK_BUILDER_FILE}', 'wb'))"
         fi
+
+        echo "pack builder create ${IMAGE} --config ${PACK_BUILDER_FILE} ${PACK_ARGS}"
+        unshare -Uf "${UNSHARE_ARGS[@]}" --keep-caps -r --map-users 1,1,65536 --map-groups 1,1,65536 -- \
+          pack builder create ${IMAGE} --config ${PACK_BUILDER_FILE} ${PACK_ARGS}
 
         REMOTESSHEOF
         chmod +x scripts/script-build.sh
