feat(): Migrate sealights tasks from integration catalog to build-definitions

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -95,6 +95,10 @@
 /stepactions/eaas-get-supported-ephemeral-cluster-versions  @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
 /task/eaas-provision-space                                  @amisstea @avi-biton @hmariset @omeramsc @yftacherzog
 
+# renovate groupName=sealights
+/task/sealights-go         @ascerra @flacatus @psturc @dbaez
+/task/sealights-python     @ascerra @flacatus @psturc @dbaez
+
 # renovate groupName=build-vm-image
 /task/build-vm-image    @arewm @brianwcook @ralphbean @scoheb
 
