--- a/renovate.json
+++ b/renovate.json
@@ -189,6 +189,13 @@
       "matchFileNames": [
         "task/build-paketo-builder-oci-ta/**"
       ]
+    },
+    {
+      "groupName": "sealights",
+      "matchFileNames": [
+        "task/sealights-go/**",
+        "task/sealights-python/**"
+      ]
     }
   ],
   "postUpdateOptions": [
