feat: Rename sealights tasks by adding suffix oci-ta to make it consistent with other ta tasks

--- a/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
+++ b/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: sealights-go-instrumentation
+  name: sealights-go-oci-ta
   labels:
     konflux-ci/sealights: "true"
     konflux-ci/sealights-language: "go"
