--- a/task/sealights-python-oci-ta/0.1/sealights-python-oci-ta.yaml
+++ b/task/sealights-python-oci-ta/0.1/sealights-python-oci-ta.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: sealights-python
+  name: sealights-python-oci-ta
   labels:
     konflux-ci/sealights: "true"
     konflux-ci/sealights-language: "python"
