push pipeline: fix appstudio-utils image ref (#1872)
Don't use the pull-request appstudio-utils image

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -188,7 +188,7 @@ spec:
         taskSpec:
           steps:
             - name: run-create-bundle-repos
-              image: quay.io/konflux-ci/pull-request-builds:appstudio-utils-{{revision}}
+              image: quay.io/konflux-ci/appstudio-utils:{{revision}}
               workingDir: $(workspaces.source.path)/source
               script: |
                 #!/usr/bin/env bash
